flux/apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: extra-tools
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://it-tools.extra-tools.svc:80"
    uptime-kuma.io/name: "it-tools"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Utilities"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
