flux/apps/it-tools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: extra-tools
spec:
  selector:
    app: it-tools
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
