flux/apps/it-tools/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: it-tools
    namespace: extra-tools
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:ONXgZC97+ldwm7kpyDrX1IfT/eWQFhlRwEuiOVSz,iv:qf5flpii+5WBhx8mMolyhdDJVOOpx3ExxRMStk0M/k8=,tag:t8TT+9U+5SwtKq+ibFyQ/Q==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: it-tools
              port: 80
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkak9pMGVlNmg1SDIyYlgv
[...]
            A0s1UIBBPS/PvCjPV2NIdh3AKv9Nmo75eFAb2r+eHRteVgMc4ToB5Q==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-08T10:18:34Z"
    mac: ENC[AES256_GCM,data:/4PkGi3jSylWG2zzX+wPJLUESDSkjsip7C8B1NJOo7yuy3LIkHi6FvstxRO8Jx4qgM2bxaox7YXCNBhrVVTb9LqyW9xhBZ12NCiEfwXWQtJW98zwQQ+AQym/2GMUqzzxcBROJNOF5SS4QsbgLWrb5hoj/j73mSut8EGEwwUFNac=,iv:SwbPCuzXE0kClO1kKa8fKH2y6eHMx5QTf/+fXaZ+E5I=,tag:GjlUl0cy9og7zWOmAUVImA==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
